<resources>
    <string name="app_name">EasyShare</string>
    <string name="home">home</string>
    <string name="explore">explore</string>
    <string name="message">message</string>
    <string name="person">person</string>
    <string name="icon">图标</string>
    <string name="loading">Loading</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="justTest">测试专用--------------测试专用---------------测试专用--------------测试专用---------------测试专用--------------测试专用---------------</string>
</resources>
