<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#f9f9f9"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/md_blue_800_color_code"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="3dp">
        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/selector_widget_bar_home"
                android:contentDescription="@string/icon"/>
            <TextView
                android:id="@+id/tv_main_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/home"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_explore"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/selector_widget_bar_explore"
                android:contentDescription="@string/icon"/>
            <TextView
                android:id="@+id/tv_main_explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/explore"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_quickOption"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/selector_widget_bar_share"
                android:contentDescription="@string/icon"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_message"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/selector_widget_bar_message"
                android:contentDescription="@string/icon"/>
            <TextView
                android:id="@+id/tv_main_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/message"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_person"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/selector_widget_bar_person"
                android:contentDescription="@string/icon"/>
            <TextView
                android:id="@+id/tv_main_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/person"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>